Added skeleton of auth project
