# Dnd.API/Infrastructure/UserDbContext.cs
@@ -9,5 +9,5 @@ public class UserDbContext : DbContext
     {
     }
 
-    public DbSet<User> Users { get; set; }
+    public DbSet<DomainUser> Users { get; set; }
 }
