# Dnd.API/Models/Campaigns/Implementations/Campaign.cs
@@ -8,13 +8,13 @@ public class Campaign : ICampaign
 {
     [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
     public int Id { get; set; }
-    
-    public string Name { get; set; }
-    public List<IUser> Players { get; set; }
-    public IUser Owner { get; set; }
-    public IUser DungeonMaster { get; set; }
 
-    public Campaign(string campaignName, List<IUser> players, IUser dungeonMaster, IUser owner)
+    public string Name { get; set; }
+    public List<IDomainUser> Players { get; set; }
+    public IDomainUser Owner { get; set; }
+    public IDomainUser DungeonMaster { get; set; }
+
+    public Campaign(string campaignName, List<IDomainUser> players, IDomainUser dungeonMaster, IDomainUser owner)
     {
         Name = campaignName;
         Players = players;
