# Dnd.Auth/Controllers/AuthController.cs
@@ -1,0 +1,16 @@
+﻿using Microsoft.AspNetCore.Mvc;
+
+namespace Dnd.Auth.Controllers;
+
+[ApiController]
+public class AuthController : ControllerBase
+{
+    public AuthController()
+    {
+    }
+
+    [HttpGet("/login")]
+    public static void LoginAsync()
+    {
+    }
+}
